--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
+  <div class="row justify-content-center">
+    <div class="col-lg-8 col-xl-6">
       <div class="d-flex justify-content-between align-items-center py-3">
         <h1 class="h3 mb-0">Dashboard</h1>
         <div>
@@ -11,8 +11,8 @@
     </div>
   </div>
   
-  <div class="row">
-    <div class="col-12">
+  <div class="row justify-content-center">
+    <div class="col-lg-8 col-xl-6">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Getting Started</h5>
