--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,76 @@
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 col-xl-6">
-          <%= yield %>
+    <% if Current.user %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <%= link_to "F2", root_path, class: "navbar-brand fw-bold" %>
+          
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <%= link_to "Dashboard", root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Feeds", feeds_path, class: "nav-link #{'active' if current_page?(feeds_path) || controller_name == 'feeds'}" %>
+              </li>
+            </ul>
+            
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="bi bi-person-circle"></i> <%= Current.user.email_address %>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end">
+                  <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Settings</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li>
+                    <%= link_to session_path, method: :delete, class: "dropdown-item" do %>
+                      <i class="bi bi-box-arrow-right"></i> Sign Out
+                    <% end %>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </div>
+      </nav>
+    <% end %>
+
+    <main class="<%= Current.user ? 'py-4' : '' %>">
+      <% if notice %>
+        <div class="container-fluid">
+          <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <%= notice %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        </div>
+      <% end %>
+
+      <% if alert %>
+        <div class="container-fluid">
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <%= alert %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        </div>
+      <% end %>
+
+      <% if Current.user %>
+        <%= yield %>
+      <% else %>
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="col-lg-8 col-xl-6">
+              <%= yield %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </main>
   </body>
 </html>
