--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -37,7 +37,7 @@
       <div class="mb-3">
         <%= form.label :loader, class: "form-label" %>
         <%= form.select :loader, 
-            options_for_select([["HTTP", "http"]], feed.loader),
+            options_for_select(Loaders::Base.available_options, feed.loader),
             { prompt: "Choose loader..." }, 
             { class: "form-select", required: true } %>
         <div class="invalid-feedback">Please select a loader.</div>
@@ -48,7 +48,7 @@
       <div class="mb-3">
         <%= form.label :processor, class: "form-label" %>
         <%= form.select :processor, 
-            options_for_select([["RSS/XML", "rss"], ["JSON", "json"]], feed.processor),
+            options_for_select(Processors::Base.available_options, feed.processor),
             { prompt: "Choose processor..." }, 
             { class: "form-select", required: true } %>
         <div class="invalid-feedback">Please select a processor.</div>
@@ -59,7 +59,7 @@
       <div class="mb-3">
         <%= form.label :normalizer, class: "form-label" %>
         <%= form.select :normalizer, 
-            options_for_select([["RSS", "rss"], ["Generic", "generic"]], feed.normalizer),
+            options_for_select(Normalizers::Base.available_options, feed.normalizer),
             { prompt: "Choose normalizer..." }, 
             { class: "form-select", required: true } %>
         <div class="invalid-feedback">Please select a normalizer.</div>
