--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -8,12 +8,10 @@
             <li class="breadcrumb-item active" aria-current="page"><%= @feed.name %></li>
           </ol>
         </nav>
-        
+
         <div class="btn-group" role="group">
           <%= link_to "Edit", edit_feed_path(@feed), class: "btn btn-outline-primary" %>
-          <%= link_to "Delete", @feed, method: :delete, 
-              confirm: "Are you sure you want to delete this feed?", 
-              class: "btn btn-outline-danger" %>
+          <%= link_to "Delete", @feed, method: :delete, confirm: "Are you sure you want to delete this feed?", class: "btn btn-outline-danger" %>
         </div>
       </div>
 
@@ -76,7 +74,6 @@
             </div>
             <div class="card-body">
               <p class="text-muted">Statistics will be available after the first successful run.</p>
-              <!-- Future implementation: show feed statistics -->
             </div>
           </div>
         </div>
