--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -36,7 +36,7 @@
                   <div class="btn-group w-100" role="group">
                     <%= link_to "View", feed, class: "btn btn-outline-primary btn-sm" %>
                     <%= link_to "Edit", edit_feed_path(feed), class: "btn btn-outline-secondary btn-sm" %>
-                    <%= link_to "Delete", feed, method: :delete, confirm: "Are you sure you want to delete this feed?", class: "btn btn-outline-danger btn-sm" %>
+                    <%= link_to "Delete", feed, data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this feed?" }, class: "btn btn-outline-danger btn-sm" %>
                   </div>
                 </div>
               </div>
@@ -45,10 +45,9 @@
         </div>
       <% else %>
         <div class="text-center py-5">
-          <i class="bi bi-rss display-1 text-muted"></i>
-          <h3 class="mt-3">No feeds yet</h3>
+          <p>No feeds yet</p>
           <p class="text-muted">Create your first feed to start aggregating content.</p>
-          <%= link_to "Create Your First Feed", new_feed_path, class: "btn btn-primary" %>
+          <%= link_to "Create Feed", new_feed_path, class: "btn btn-primary" %>
         </div>
       <% end %>
     </div>
