--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -11,7 +11,7 @@
 
         <div class="btn-group" role="group">
           <%= link_to "Edit", edit_feed_path(@feed), class: "btn btn-outline-primary" %>
-          <%= link_to "Delete", @feed, method: :delete, confirm: "Are you sure you want to delete this feed?", class: "btn btn-outline-danger" %>
+          <%= link_to "Delete", @feed, data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this feed?" }, class: "btn btn-outline-danger" %>
         </div>
       </div>
 
