--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 
   <body>
     <% if Current.user %>
+      <%# Navigation bar %>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <%= link_to "F2", root_path, class: "navbar-brand fw-bold" %>
@@ -33,6 +34,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarNav">
+            <%# Navigation links %>
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
                 <%= link_to "Dashboard", root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
@@ -42,18 +44,17 @@
               </li>
             </ul>
 
+            <%# Dropdown menu %>
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <i class="bi bi-person-circle"></i> <%= Current.user.email_address %>
+                  <%= Current.user.email_address %>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                  <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Profile</a></li>
+                  <li><a class="dropdown-item" href="#">Profile</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li>
-                    <%= link_to session_path, method: :delete, class: "dropdown-item" do %>
-                      <i class="bi bi-box-arrow-right"></i> Sign Out
-                    <% end %>
+                    <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
                   </li>
                 </ul>
               </li>
@@ -63,7 +64,7 @@
       </nav>
     <% end %>
 
-    <main class="<%= Current.user ? 'py-4' : '' %>">
+    <main class="container-md py-4">
       <% if notice %>
         <div class="container-fluid">
           <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -82,17 +83,7 @@
         </div>
       <% end %>
 
-      <% if Current.user %>
-        <%= yield %>
-      <% else %>
-        <div class="container-fluid">
-          <div class="row justify-content-center">
-            <div class="col-lg-8 col-xl-6">
-              <%= yield %>
-            </div>
-          </div>
-        </div>
-      <% end %>
+      <%= yield %>
     </main>
   </body>
 </html>
