--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,21 +66,11 @@
 
     <main class="container-md py-4">
       <% if notice %>
-        <div class="container-fluid">
-          <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <%= notice %>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-        </div>
+        <%= render "shared/flash_alert", alert_type: "success", message: notice %>
       <% end %>
 
       <% if alert %>
-        <div class="container-fluid">
-          <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <%= alert %>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-        </div>
+        <%= render "shared/flash_alert", alert_type: "danger", message: alert %>
       <% end %>
 
       <%= yield %>
