--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,1 +1,7 @@
-<h1>Dashboard</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <h1>Dashboard</h1>
+    </div>
+  </div>
+</div>
