Add feeds CRUD functionality (#9)
* Add user association to feeds

* Add feed processing architecture

* Add feeds controller and routes

* Add feeds views and navigation

* Update test infrastructure for feeds functionality

* Refactor feeds controller and base classes

* Remove unused JSON processor

* Improve HTML cleaning with Nokogiri

* Improve description normalization to remove duplicate spaces

* Update placeholder comments to TBD

* Update project documentation

* Clean up

* Formatting

* Drop redundant `rescue`

* Registration logic (initial approach)

* Make processing classes discoverable

* Spacing

* Remove hardcoded date and time formats

* Overridable display name

* Clean up

* Remove local Claude settings from version control

* Draft test coverage

* Use the new :unprocessable_content status code

Instead of the deprecated :unprocessable_entity

* Add mailer layout

* Do not test what's private

* Fix test coverage report

Parallelization was causing the incomplete coverage reports

* Generate HTML test coverage report

* Draft test coverage

* Rubocop

* Clean up the tests

* Clean up the tests

* Load feed explicitly

* Drop redundant include

* Clean up

* Simplify normalization Feed attributes normalization

* Clean up

* Define reusable feed name pattern

* Clean up

* Extract constants

* Clean up

* Clean up

* Agent practices

* Test coverage

* Clean up

* Add `minitest-rails`

* Simplify page layout

* Extract reusable partial view

* Simplify HTML layouts

* Use static configuration instead of `Discoverable`

* Fill dropdowns in the feed form

* Fix cron field submission

* Clean up the views

* Add `.editorconfig`

* Add codecov badge

* Add codecov configuration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,57 @@
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 col-xl-6">
-          <%= yield %>
+    <% if Current.user %>
+      <%# Navigation bar %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <%= link_to "F2", root_path, class: "navbar-brand fw-bold" %>
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <%# Navigation links %>
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <%= link_to "Dashboard", root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Feeds", feeds_path, class: "nav-link #{'active' if current_page?(feeds_path) || controller_name == 'feeds'}" %>
+              </li>
+            </ul>
+
+            <%# Dropdown menu %>
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <%= Current.user.email_address %>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end">
+                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li>
+                    <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </div>
+      </nav>
+    <% end %>
+
+    <main class="container-md py-4">
+      <% if notice %>
+        <%= render "shared/flash_alert", alert_type: "success", message: notice %>
+      <% end %>
+
+      <% if alert %>
+        <%= render "shared/flash_alert", alert_type: "danger", message: alert %>
+      <% end %>
+
+      <%= yield %>
+    </main>
   </body>
 </html>
