--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,14 +1,7 @@
-<div class="d-flex justify-content-between align-items-center py-3">
-  <h1 class="h3 mb-0">Dashboard</h1>
-  <div>
-    <span class="text-muted me-3">Welcome, <%= Current.user.email_address %></span>
-    <%= link_to "Sign out", session_path, data: { turbo_method: :delete }, class: "btn btn-outline-secondary btn-sm" %>
-  </div>
-</div>
-
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title">Getting Started</h5>
-    <p class="card-text">Welcome to your dashboard! This is your home page.</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <h1>Dashboard</h1>
+    </div>
   </div>
 </div>
