Use generic greeting in email confirmation text version
Change from 'Hello user@example.com,' to 'Hello,' for consistency
with HTML version and better user experience.

--- a/app/views/profile_mailer/email_change_confirmation.text.erb
+++ b/app/views/profile_mailer/email_change_confirmation.text.erb
@@ -1,6 +1,6 @@
 Confirm your new email address
 
-Hello <%= @user.email_address %>,
+Hello,
 
 You requested to change your email address to <%= @new_email %>.
 
