Do not address user by email

--- a/app/views/profile_mailer/email_change_confirmation.html.erb
+++ b/app/views/profile_mailer/email_change_confirmation.html.erb
@@ -1,6 +1,6 @@
 <h2>Confirm your new email address</h2>
 
-<p>Hello <%= @user.email_address %>,</p>
+<p>Hello,</p>
 
 <p>You requested to change your email address to <strong><%= @new_email %></strong>.</p>
 
