--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
                   <li><%= link_to "Profile", profile_path, class: "dropdown-item" %></li>
+                  <li><%= link_to "Tokens", access_tokens_path, class: "dropdown-item" %></li>
                   <li><hr class="dropdown-divider"></li>
                   <li>
                     <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
