--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,7 +1,3 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
-      <h1>Dashboard</h1>
-    </div>
-  </div>
+<div class="d-flex justify-content-between align-items-center mb-4">
+  <h1 class="mb-0">Dashboard</h1>
 </div>
