--- a/app/views/access_tokens/_status.html.erb
+++ b/app/views/access_tokens/_status.html.erb
@@ -1,4 +1,4 @@
-<div id="access_token_<%= token.id %>_status">
+<div id="<%= dom_id(token, :status) %>">
   <% if local_assigns[:validating] %>
     <span class="badge bg-warning">
       <div class="spinner-border spinner-border-sm me-1" role="status" aria-hidden="true"></div>
