Use token-specific Turbo Stream channels for better isolation

--- a/app/views/access_tokens/index.html.erb
+++ b/app/views/access_tokens/index.html.erb
@@ -1,4 +1,6 @@
-<%= turbo_stream_from "access_tokens" %>
+<% @access_tokens.each do |token| %>
+  <%= turbo_stream_from "access_token_#{token.id}" %>
+<% end %>
 
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h1 class="mb-0">Access Tokens</h1>
