--- a/app/views/access_tokens/index.html.erb
+++ b/app/views/access_tokens/index.html.erb
@@ -44,9 +44,9 @@
             </td>
             <td class="text-end">
               <% unless token.active? %>
-                <%= button_to "Validate", access_token_token_validations_path(token),
-                              class: "btn btn-link text-primary text-decoration-none p-0 me-3",
-                              form_class: "d-inline" %>
+                <%= link_to "Validate", access_token_token_validations_path(token),
+                            class: "text-primary text-decoration-none me-3",
+                            data: { turbo_method: :post } %>
               <% end %>
               <%= link_to "Delete", access_token_path(token),
                           class: "text-danger text-decoration-none",
