Move status partial to shared/_access_token_status

--- a/app/views/access_tokens/index.html.erb
+++ b/app/views/access_tokens/index.html.erb
@@ -26,7 +26,7 @@
               <%= token.name %>
             </td>
             <td>
-              <%= render "status", token: token %>
+              <%= render "shared/access_token_status", token: token %>
             </td>
             <td>
               <span class="text-muted">
